--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,7 @@
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
-    "cropperjs": "^2.0.0",
+    "cropperjs": "^2.0.0-rc.2",
     "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
