--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        cd Backend
+        cd Backend_v2
         python -m pip install --upgrade pip
         pip install pylint
         pip install -r ./requirements.txt
