feat: 添加 Redis 支持，新增 RedisConnector 类并更新相关配置；优化 WeComService 中的 OAuth 逻辑

--- a/Backend_v2/.env.example
+++ b/Backend_v2/.env.example
@@ -15,6 +15,10 @@ DB_POOL_MIN_SIZE=5
 DB_POOL_MAX_SIZE=10
 DB_SSL=false
 
+REDIS_URL=redis://localhost:6379/0
+REDIS_PASSWORD=your_redis_password_here
+REDIS_POOL_MAX_SIZE=10
+
 # ======================================
 # API 认证配置
 # ======================================
