--- a/Backend_v2/requirements.txt
+++ b/Backend_v2/requirements.txt
@@ -36,4 +36,6 @@ cryptography~=44.0.2
 pypinyin~=0.54.0
 
 filelock ~= 3.18.0
-argon2-cffi==23.1.0
+argon2-cffi~=23.1.0
+redis~=5.2.1
+hiredis~=3.1.0
