feat: 添加日志级别配置，优化日志记录方式

--- a/Backend_v2/.env.example
+++ b/Backend_v2/.env.example
@@ -2,6 +2,8 @@ ENV=development
 
 URI_PREFIX=/api/v1
 
+LOG_LEVEL=debug
+
 # ======================================
 # 数据库配置
 # ======================================
