--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ doc.md
 /Backend/.env
 /Backend/send_message/all_users_info.json
 /Backend/send_message/users_dev.json
+/Backend_v2/all_users_info_old.json
