chore: update .gitignore and modify database configuration in add_users_from_json.py

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ doc.md
 /Backend/send_message/all_users_info.json
 /Backend/send_message/users_dev.json
 /Backend_v2/all_users_info_old.json
+/Backend_v2/add_users_manual/testusers.json
